2001-03-20 Christoph Cullmann <crossfire@babylon2k.de>
        * kant is now a normal KApplication

2001-03-18 Christoph Cullmann <crossfire@babylon2k.de>
        * big location changes of source files
        * KantFactory now in use by hole Kant app
        * KantPartView/Doc merged with KantView/Doc (make life more easy)

2001-03-18 Joseph Wenninger <jowenn@bigfoot.com>
        * openheader plugin opens the corresponding
          .h file for .cpp or .c, and vice versa
        * Hopefully fixed highlighting dialog for now.

2001-03-17 Joseph Wenninger <jowenn@bigfoot.com>
        * Syntaxhighlighting is now defined in cpp.xml, c.xml html.xml ...
          instead of a global syntax.xml.
          (Not ported completely yet)
        * Some simple reg expression work (see html.xml)

2001-03-17 Christoph Cullmann <crossfire@babylon2k.de>
        * moved textfilter stuff to a own plugin "textfilter"
        * cleaned up kantmainwindow.*

2001-03-16 Christoph Cullmann <crossfire@babylon2k.de>
        * search dialog comes up with selected text
        * backport of some KDevelop KWrite patches ;)

2001-03-15 Christoph Cullmann <crossfire@babylon2k.de>
        * kantpart finished
        * new kwrite using kantpart
        * removed old kwrite and kwritepart !
        * fixed menu and toolbar problems of the new KWrite app

2001-03-11 Christoph Cullmann <crossfire@babylon2k.de>
        * kwrite stuff merged into kant !!!!!

2001-03-04 Christoph Cullmann <crossfire@babylon2k.de>
        * mutiple mainwindows
        * fileist, sync for all mainwindows, all open docs listed

2001-03-03 Christoph Cullmann <crossfire@babylon2k.de>
        * session managment (Anders Lund)
        * removed some debug stuff

2001-02-26 Joseph Wenninger <jowenn@bigfoot.com>
        * First step for a plugin management dialog page
          Soon to come

2001-02-26 Christoph Cullmann <crossfire@babylon2k.de>
        * Kant is a part of kdebase :)