@@ -1,3 +1,6 @@
+2001-03-21 Christoph Cullmann <crossfire@babylon2k.de>
+        * QPopupMenu for filelist
+
 2001-03-20 Christoph Cullmann <crossfire@babylon2k.de>
         * kant is now a normal KApplication
 
